--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -4,5 +4,5 @@
 }
 
 body {
-    background: linear-gradient(#90FCF9, #7699D4, #9448BC );
+    background: linear-gradient(white, #90FCF9, #7699D4 );
 }
