--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -31,6 +31,7 @@ nav a:hover{
 }
 footer {
   color: white;
+  width: 100%;      
 }
 footer h3 {
   margin-bottom: 30px;
@@ -57,3 +58,9 @@ footer .footer-below {
 .table {
     margin-bottom: 0px;
 }
+
+
+.carousel .img {
+ height: 300px;
+  object-fit: cover;
+ }
